deployment/kubernetes/vector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: insa-vector-cluster
spec:
  replicas: 2
  selector:
    matchLabels:
      app: insa-vector-cluster
  template:
    metadata:
      labels:
        app: insa-vector-cluster
    spec:
      containers:
      - name: vector-node
        image: insa-vector-node:latest
        ports:
        - containerPort: 50051
        resources:
          limits:
            nvidia.com/gpu: 1
---
apiVersion: v1
kind: Service
metadata:
  name: insa-vector-svc
spec:
  selector:
    app: insa-vector-cluster
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
